As captured February 8, 2025

--- a/56583-h/56583-h.htm
+++ b/56583-h/56583-h.htm
@@ -114,8 +114,8 @@ Character set encoding: UTF-8
 
 
 
-Produced by Mardi Desjardins, Waverley Dovey & the online
-Distributed Proofreaders Canada team at
+Produced by Mardi Desjardins, Waverley Dovey &amp; the online
+Project Gutenberg team at
 http://www.pgdpcanada.net
 
 
@@ -9067,8 +9067,8 @@ End of the Project Gutenberg EBook of Patty in the City, by Carolyn Wells
 This and all associated files of various formats will be found in:
         http://www.gutenberg.org/5/6/5/8/56583/
 
-Produced by Mardi Desjardins, Waverley Dovey & the online
-Distributed Proofreaders Canada team at
+Produced by Mardi Desjardins, Waverley Dovey &amp; the online
+Project Gutenberg team at
 http://www.pgdpcanada.net
 
 Updated editions will replace the previous one--the old editions will
